# swig_python_c_test

./: README  run_example.py
.github/workflows/: ci_pipeline.yml
example/: example.i  run_example.py
example_native/: build.sh  example.c  wrapper_example.c
example_swig/: build.sh
example_swig_skbuild/: CMakeLists.txt  build.sh  example.i  setup.py
example_swig_skbuild/clib/: CMakeLists.txt
example_with_skbuild/: CMakeLists.txt  setup.py
example_with_skbuild/clib/: CMakeLists.txt
native_example/: native_example.c  native_example.h  run_native_example.py  wrapper_native_example.c
tests/: test_example.py
